--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,17 @@
 apply plugin: 'java'
+apply plugin: 'application'
 
 repositories {
     jcenter()
 }
 
+mainClassName = "org.github.mbarberot.App"
+
 dependencies {
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:1.7.21'
-    
+
+    compile "com.sparkjava:spark-core:2.5.2"
+
     testCompile 'junit:junit:4.12'
 }
