--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,9 @@ dependencies {
     compile 'org.slf4j:slf4j-api:1.7.21'
 
     compile "com.sparkjava:spark-core:2.5.2"
+    compile "com.sparkjava:spark-template-jade:2.3"
+
+    compile 'com.google.guava:guava:20.0'
 
     testCompile 'junit:junit:4.12'
 }
