--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,10 @@ services:
       DB_URL: "mongodb://test:test@database/mtg_grimoire"
       DB_NAME: "mtg_grimoire"
       PORT: "8080"
+      JAVA_OPTS: "-agentlib:jdwp='transport=dt_socket,server=y,suspend=n,address=5005'"
     ports:
       - 8080:8080
+      - 5005:5005
     volumes:
       - ./build/install/mtg-grimoire:/app
     working_dir: /app
