--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,26 @@
 version: '2'
 services: 
-#  database:
-#    image: mongo:3
-#    container_name: mtg_grimoire_database
+  database:
+    image: mongo:3
+    container_name: mtg_grimoire_database
+    volumes:
+      - ./docker/db:/data/db
+    
+  database_admin:
+    image: mongo-express:latest
+    container_name: mtg_grimoire_database_admin
+    links:
+      - database:mongo
+    ports:
+      - 8081:8081
   
   grimoire:
     image: java:8
     container_name: mtg_grimoire_app
-#    links:
-#      - database
+    links:
+      - database:mongo
     environment:
-      DB_URL: "mongodb://test:test@database/mtg_grimoire"
+      DB_URL: "mongodb://test:test@mongo:27017/mtg_grimoire"
       DB_NAME: "mtg_grimoire"
       PORT: "8080"
       JAVA_OPTS: "-agentlib:jdwp='transport=dt_socket,server=y,suspend=n,address=5005'"
