--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,10 @@ dependencies {
     compile 'com.sparkjava:spark-core:2.5.2'
     compile 'com.sparkjava:spark-template-jade:2.3'
     compile 'com.google.guava:guava:20.0'
+
     compile 'org.mongodb:mongodb-driver:3.4.0'
     compile 'com.github.bguerout:jongo:1.4-early-20160606-0118'
+    compile 'com.fasterxml.jackson.module:jackson-module-kotlin:2.8.4'
 
     testCompile 'junit:junit:4.12'
     testCompile "org.mockito:mockito-core:2.+"
@@ -40,4 +42,5 @@ sourceSets {
     main.java.srcDirs += 'src/main/kotlin'
 }
 
+//noinspection GroovyUnusedAssignment
 mainClassName = 'org.github.mbarberot.mtg.grimoire.spark.App'
