--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,9 @@ cache:
 jdk:
   - oraclejdk8
 
+script:
+  - ./gradlew check
+  - ./gradlew jacocoTestReport
+
 after_success:
   - bash <(curl -s https://codecov.io/bash)
