--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 
     testCompile 'junit:junit:4.12'
     testCompile "org.mockito:mockito-core:2.+"
+    testCompile 'com.nhaarman:mockito-kotlin:1.1.0'
 }
 
 task stage(dependsOn: ['clean', 'build', 'installDist'])
