--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,8 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile 'com.github.salomonbrys.kodein:kodein:3.2.0'
+    compile 'com.github.salomonbrys.kodein:kodein-conf:3.2.0'
 
     compile 'org.slf4j:slf4j-api:1.7.21'
     compile 'org.slf4j:slf4j-simple:1.7.21'
